fix(room-style): adjust background gradient opacity for improved visibility

--- a/static/room.css
+++ b/static/room.css
@@ -53,7 +53,7 @@ body{
 
 
     color: rgb(228, 228, 228);
-    background: linear-gradient(to bottom, rgba(167, 167, 167, 0.15), rgba(255, 255, 255, 0.2));
+    background: linear-gradient(to bottom, rgba(167, 167, 167, 0.25), rgba(255, 255, 255, 0.1));
 
     flex-direction: row;
     align-items: center;
